fix contact page address when on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,6 +785,11 @@ height: 300px;
 font-size: 200%;
 margin-top: 10px;
 }
+
+/* Contact page styles */
+#address h1 {
+    font-size: 120%;
+}
 }
 
 /* media query for screen size 500px styles */
